--- a/backend/06-blogApiMongoose/package.json
+++ b/backend/06-blogApiMongoose/package.json
@@ -1,6 +1,7 @@
 {
   "name": "06-blogapimongoose",
   "version": "1.0.0",
+  "description": "This project contains a **Todo API** application. It demonstrates the basic components and functionalities of a backend application.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
