--- a/backend/08-blogApi_SearchSortPagi/package.json
+++ b/backend/08-blogApi_SearchSortPagi/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "06-blogapimongoose",
+  "name": "13-blogapi_mongoose",
   "version": "1.0.0",
-  "description": "This project contains a **Todo API** application. It demonstrates the basic components and functionalities of a backend application.",
+  "description": "## MONGOOSE",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^2.1.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.9.3"
+    "mongoose": "^7.5.3"
   }
 }
