--- a/backend/14-rentACarAPI/package.json
+++ b/backend/14-rentACarAPI/package.json
@@ -12,6 +12,7 @@
   "author": "Clarusway",
   "license": "ISC Licence",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
